Fix new warnings